Closed Bug 349651 Opened 19 years ago Closed 19 years ago

Cut down on some logging in widget/cocoa code

Categories

(Core :: Widget: Cocoa, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: hwaara, Assigned: jaas)

References

Details

The main assertion/logging I see when running a Cocoafox build is this: 2006-08-22 11:18:05.295 firefox-bin[1554] Top-level window being created at Cocoa rect: 0.000000, 900.000000, 0.000000, 0.000000 2006-08-22 11:18:05.337 firefox-bin[1554] Top-level window being created at Cocoa rect: 0.000000, 900.000000, 0.000000, 0.000000 2006-08-22 11:18:05.446 firefox-bin[1554] Top-level window being created at Cocoa rect: 0.000000, 900.000000, 0.000000, 0.000000 2006-08-22 11:18:06.537 firefox-bin[1554] Top-level window being created at Cocoa rect: 0.000000, 900.000000, 0.000000, 0.000000 I think in the public goal of trying to make console output less spammy and more useful (see bug 341986) it would be nice to skip this logging, or make it #ifdef DEBUG_cocoa or something. The same goes for other cocoa/widget console messages, if there are any.
I planned to remove some of that when Cocoa widgets are more complete. For a long time it was just me and sometimes Mark hacking on them. I'll drop some logging soon.
Fixed on trunk. In the future, filing a bug about a single debug build NSLog/printf statement probably isn't necessary. Try to just find me on IRC or email me. I could see this getting out of hand if lots of people start doing it. Some degree of log output is just what happens when you run debug builds, and everybody has a different opinion on how much is too much.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.