reduce some logging in debug builds. b=349651